Closed Bug 1819760 Opened 1 year ago Closed 1 year ago

Dragging and dropping the identity box to the desktop to create a .url shortcut is broken (creates .url.download instead of .url)

Categories

(Firefox :: File Handling, defect, P1)

Firefox 112
Desktop
All
defect

Tracking

()

VERIFIED FIXED
112 Branch
Tracking Status
firefox-esr102 --- fixed
firefox110 --- unaffected
firefox111 --- unaffected
firefox112 --- verified

People

(Reporter: Frank.Fehling, Assigned: enndeakin)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:109.0) Gecko/20100101 Firefox/112.0

Steps to reproduce:

Mouse right click on the padlock symbol and release the mouse button on the Windows Explorer file area.

Actual results:

Firefox 112.0a1 Build-ID 20230301093735:
A shortcut file was created, but instead of type ".url" now as "url.download".
Windows can't work with the type ".download".

Expected results:

Create a shortcut file of type ".url" like in the version before.
Windows can open the shortcut in Firefox Nightly (my standard browser) again.

The Bugbug bot thinks this bug should belong to the 'Firefox::File Handling' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → File Handling

This is the result of a security fix that impacted downloads (maybe bug 1809923, maybe one of the related bugs), but where clearly our attempt to be generic and prevent this everywhere led to us breaking expected functionality. :-(

OS: Unspecified → All
Hardware: Unspecified → Desktop
See Also: → CVE-2023-25734
Summary: When drag and drop the URL, now the URL is filed as type .url.download instead of .url → Dragging and dropping the identity box to the desktop to create a .url shortcut is broken (creates .url.download instead of .url)

We should be able to fix this by modifying CreateURLFilenameFromTextA/CreateURLFilenameFromTextW to pass the VALIDATE_ALLOW_INVALID_FILENAMES flag.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Severity: -- → S3
Priority: -- → P1
Pushed by neil@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/731c660cee74
don't modify extensions when trying to create a desktop shortcut, r=Gijs
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch

YES! Thank you all, it works again!

(In reply to Frank from comment #8)

YES! Thank you all, it works again!

Thanks for the quick update and for reporting this so quickly after it broke; it helped avoid shipping this regression to the release channel. :-)

Status: RESOLVED → VERIFIED

A patch has been attached on this bug, which was already closed. Filing a separate bug will ensure better tracking. If this was not by mistake and further action is needed, please alert the appropriate party. (Or: if the patch doesn't change behavior -- e.g. landing a test case, or fixing a typo -- then feel free to disregard this message)

Comment on attachment 9326152 [details]
WIP: Bug 1819760, don't modify extensions when trying to create a desktop shortcut, esr version

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Regression from bug 1815062 which is needed if that bug is landed.
  • User impact if declined: Dragging a link to the desktop is broken. (Windows only)
  • Fix Landed on Version: 112
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Minor change which just reverts behaviour for dragging.

Note that this patch conflicts with bug 1806730 so that bug should land first.

Attachment #9326152 - Flags: approval-mozilla-esr102?

Comment on attachment 9326152 [details]
WIP: Bug 1819760, don't modify extensions when trying to create a desktop shortcut, esr version

Approved for 102.10esr.

Attachment #9326152 - Flags: approval-mozilla-esr102? → approval-mozilla-esr102+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: