Bug 1819760, don't modify extensions when trying to create a desktop shortcut, r=Gijs a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D174194